--- a/style.css
+++ b/style.css
@@ -27,4 +27,40 @@ background-color: blue;
     width: 40%;
     background-color: chocolate;
 }
+.buttonContainer{
+    position: absolute;
+    top: 65%;
+    left: 1%;
+    text-align: center;
+    height: 15%;
+    width: 40%;
+    background-color: greenyellow;
+}
+.randGen {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    text-align: center;
+    height: 20%;
+    width: 15%;
+    background-color: greenyellow;
+}
+.userScore {
+    position: absolute;
+    top: 37.5%;
+    left: 50%;
+    text-align: center;
+    height: 20%;
+    width: 15%;
+    background-color: greenyellow;
+}
+.winLoss {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    text-align: center;
+    height: 20%;
+    width: 15%;
+    background-color: greenyellow;
+}
 
