--- a/style.css
+++ b/style.css
@@ -1,66 +1,41 @@
-body {
-background-color: blue;
-}
 
-.container{
+html, body {
     height: 100%;
-    width: 100%;
-}
+  }
+  
+  .full-height {
+    height: 100%;
+  }
 
-.title{
-    position: absolute;
-    top: 1%;
-    left: 1%;
-    text-align: center;
-    height: 8%;
-    width: 25%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 36px;
-    background-color: aliceblue;
-    padding-top: 2%;
-}
-.instructions {position: absolute;
-    top: 15%;
-    left: 1%;
-    text-align: center;
-    height: 40%;
-    width: 40%;
-    background-color: chocolate;
-}
-.buttonContainer{
-    position: absolute;
-    top: 65%;
-    left: 1%;
-    text-align: center;
-    height: 15%;
-    width: 40%;
-    background-color: greenyellow;
-}
-.randGen {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    text-align: center;
-    height: 20%;
-    width: 15%;
-    background-color: greenyellow;
-}
-.userScore {
-    position: absolute;
-    top: 37.5%;
-    left: 50%;
-    text-align: center;
-    height: 20%;
-    width: 15%;
-    background-color: greenyellow;
-}
-.winLoss {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    text-align: center;
-    height: 20%;
-    width: 15%;
-    background-color: greenyellow;
-}
 
+  .borderSection{
+      border-color: blue;
+      border-style: groove;
+      border-width: 5px;
+      border-radius: 8px;
+  }
+
+  .c:active{
+    border-color: blue;
+    border-style: groove;
+    border-width: 5px;
+    border-radius: 8px;
+  }
+
+
+.c1{
+    height: 200px;
+    width: 200px;
+}
+.c2{
+    height: 200px;
+    width: 200px;
+}
+.c3{
+    height: 200px;
+    width: 200px;
+}
+.c4{
+    height: 200px;
+    width: 200px;
+}
