added some basic instructions

--- a/style.css
+++ b/style.css
@@ -43,9 +43,15 @@ html, body {
     height: 200px;
     width: 200px;
 }
-#yourNum, #addNum, #win, #loss {
+#yourNum, #addNum, #win, #loss{
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 75px;
     font-weight: bold;
 }
+#instruct{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+}
+
