made data-number assignment one line instead of 4

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 
 html, body {
     height: 100%;
+    background-image: url('./memphis-mini-dark.png');
+    color: mediumseagreen;
+  }
+
+  .backGround {
+      background-color: aliceblue;
   }
   
   .full-height {
