--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html, body {
 }
 #instruct{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
+    font-size: 3.1rem;
     font-weight: bold;
 }
 
